--- a/public/project/views/theme/theme-edit.view.client.html
+++ b/public/project/views/theme/theme-edit.view.client.html
@@ -36,7 +36,7 @@
     <form name="myForm" novalidate>
         <div class="form-group">
             <label for="themename">Theme Name</label>
-            <input ng-model="model.Theme.name" name="name" class="form-control" id="Themename" type="text"
+            <input ng-model="model.theme.name" name="name" class="form-control" id="Themename" type="text"
                    placeholder="theme name" required/>
             <span class="help-block"
                   ng-show="(myForm.name.$invalid && !myForm.name.$pristine)">
