--- a/public/project/views/snatch/snatch-edit.view.client.html
+++ b/public/project/views/snatch/snatch-edit.view.client.html
@@ -52,8 +52,7 @@
             <input name="snatchId" value="{{model.snatch._id}}" style="display: none"/>
             <input name="userId" value="{{model.userId}}" style="display: none"/>
             <input name="themeId" value="{{model.themeId}}" style="display: none"/>
-            <input name="snatchId" value="{{model.snatchId}}" style="display: none"/>
-
+            <input name="snatchUrl" value="{{model.snatch.url}}" style="display: none"/>
             <button id="upload" type="submit" class="btn btn-block btn-primary">Upload Image</button>
         </div>
         <div class="form-group">
