--- a/public/project/views/snatch/snatch-list.view.client.html
+++ b/public/project/views/snatch/snatch-list.view.client.html
@@ -29,15 +29,20 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="col-xs-12 col-sm-8">
     <ul>
         <li ng-repeat="snatch in model.snatches">
             <div class="container-fluid row">
                 <div class="col-xs-4">
                     <a href="#/user/{{model.userId}}/theme/{{model.themeId}}/snatch/{{snatch._id}}" class="nounderline">
-                        <img ng-src="{{snatch.url}}">
-                        <text>{{snatch.description}}</text>
+                        <img id="image" ng-src="{{snatch.url}}">
+                        <label for="des">Description</label>
+                        <textarea id="des">{{snatch.description}}</textarea>
+                        <!--<text name="themes">{{model.snatch._theme}}</text>-->
                     </a>
+                    <label for="comment">Comment</label>
+                    <textarea name='comment' id='comment'></textarea>
+                    <button type="button">Submit</button>
                 </div>
             </div>
         </li>
