--- a/public/project/views/theme/theme-list.view.client.html
+++ b/public/project/views/theme/theme-list.view.client.html
@@ -9,7 +9,7 @@
             </div>
         </div>
 
-        <div class="col-xs-10">
+        <div class="col-xs-6">
             <div class="navbar-header">
                 <a id="head" class="navbar-brand" href="#">
                     Themes
@@ -26,10 +26,18 @@
                 </p>
             </div>
         </div>
+
+        <div class="col-xs-4">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">
+                    User following
+                </a>
+            </div>
+        </div>
     </div>
 </nav>
 
-<div class="container">
+<div class="col-xs-12 col-sm-8">
     <ul>
         <li ng-repeat="theme in model.themes">
             <div class="container-fluid row">
@@ -41,6 +49,17 @@
                     <a href="#/user/{{model.userId}}/theme/{{theme._id}}" class="nounderline">
                         <span class="glyphicon glyphicon-cog"></span></a>
                 </div>
+            </div>
+        </li>
+    </ul>
+</div>
+
+<div class="col-xs-4">
+    <ul>
+        <li ng-repeat="theme in model.themes">
+            <div class="container-fluid row">
+                <a href="#/user/{{model.userId}}/theme"
+                   class="nounderline">{{theme._user}}</a>
             </div>
         </li>
     </ul>
