--- a/public/project/views/user/profile.view.client.html
+++ b/public/project/views/user/profile.view.client.html
@@ -3,7 +3,7 @@
         <div class="col-xs-11 col-sm-11">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">
-                    Showhat
+                    Snatch
                 </a>
             </div>
         </div>
@@ -37,11 +37,25 @@
         </div>
         <div class="form-group">
             <label for="first-name">First Name</label>
-            <input ng-model="model.user.firstName" type="text" class="form-control" id="first-name" placeholder="Alice">
+            <input ng-model="model.user.firstName" type="text" class="form-control" id="first-name"
+                   placeholder="First Name">
         </div>
         <div class="form-group">
             <label for="last-name">Last Name</label>
-            <input ng-model="model.user.lastName" type="text" class="form-control" id="last-name" placeholder="Wonderland">
+            <input ng-model="model.user.lastName" type="text" class="form-control" id="last-name"
+                   placeholder="Last Name">
+        </div>
+        <div class="input-group date form-group" data-provide="datepicker">
+            <label for="dob">Date of Birth</label>
+            <input class="form-control" ng-model="model.user.DOB" placeholder="Date of Birth" type="text" id="dob">
+            <div class="input-group-addon">
+                <span class="glyphicon glyphicon-th"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="phone">Phone Number</label>
+            <input ng-model="model.user.phone" type="text" id="phone" class="form-control"
+                   placeholder="Phone Number">
         </div>
     </form>
 
