--- a/public/project/views/snatch/snatch-edit.view.client.html
+++ b/public/project/views/snatch/snatch-edit.view.client.html
@@ -38,12 +38,21 @@
         <div class="form-group">
             <label for="description">Description</label>
             <textarea ng-model="model.snatch.description" rows="2" name="description" type="text" class="form-control"
-                      id="description" placeholder="description"
-                      required>
+                      id="description" placeholder="description" required>
             </textarea>
             <span class="help-block"
                   ng-show="(myForm.description.$invalid && !myForm.description.$pristine)">
                   Please input image description.
+            </span>
+            <label for="themes">Themes</label>
+            <textarea ng-model="model.themeName" rows="2" name="themes" type="text" class="form-control"
+                      id="themes" placeholder="themes" required>
+            </textarea>
+            <label>Created Time</label>
+            <text>{{model.snatch.dateCreated}}</text><br>
+            <span class="help-block"
+                  ng-show="(myForm.themes.$invalid && !myForm.themes.$pristine)">
+                  Please input image theme.
             </span>
         </div>
         <div class="form-group">
@@ -54,10 +63,6 @@
             <input name="themeId" value="{{model.themeId}}" style="display: none"/>
             <input name="snatchUrl" value="{{model.snatch.url}}" style="display: none"/>
             <button id="upload" type="submit" class="btn btn-block btn-primary">Upload Image</button>
-        </div>
-        <div class="form-group">
-            <a href="#/user/{{model.userId}}/theme/{{model.themeId}}/snatch/{{model.snatchId}}/search"
-               id="search" type="button" class="btn btn-block btn-success">Search</a>
         </div>
     </form>
     <a ng-click="model.deleteSnatch(model.snatchId)" class="btn btn-danger  btn-block">Delete</a>
