--- a/public/project/views/theme/theme-list.view.client.html
+++ b/public/project/views/theme/theme-list.view.client.html
@@ -38,6 +38,10 @@
 </nav>
 
 <div class="col-xs-12 col-sm-8">
+    <form class="form-wrapper">
+        <input type="text" id="searchthemes" placeholder="Search for themes" required>
+        <input type="submit" value="search" id="submitthemes">
+    </form>
     <ul>
         <li ng-repeat="theme in model.themes">
             <div class="container-fluid row">
@@ -54,7 +58,13 @@
     </ul>
 </div>
 
+<div class="vr"></div>
+
 <div class="col-xs-4">
+    <form class="form-wrapper">
+        <input type="text" id="searchsnatches" placeholder="Search for snatches" required>
+        <input type="submit" value="search" id="submitsnatches">
+    </form>
     <ul>
         <li ng-repeat="user in model.followedUsers">
             <div class="container-fluid row">
