add addCommentToSnatch function

--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -53,6 +53,10 @@ li {
     right:460px;
 }
 
+.noborder {
+    border: none;
+}
+
 .datepickerdemoBasicUsage {
     /** Demo styles for mdCalendar. */
 }
