--- a/public/project/views/theme/theme-list.view.client.html
+++ b/public/project/views/theme/theme-list.view.client.html
@@ -9,10 +9,10 @@
             </div>
         </div>
 
-        <div class="col-xs-6">
+        <div class="col-xs-2">
             <div class="navbar-header">
                 <a id="head" class="navbar-brand" href="#">
-                    Themes
+                    Themes following
                 </a>
             </div>
         </div>
@@ -30,26 +30,30 @@
         <div class="col-xs-4">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">
-                    User following
+                    Users following
+                </a>
+            </div>
+        </div>
+
+        <div class="col-xs-4">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">
+                    Search
                 </a>
             </div>
         </div>
     </div>
 </nav>
 
-<div class="col-xs-12 col-sm-8">
-    <form class="form-wrapper">
-        <input type="text" id="searchthemes" placeholder="Search for themes" required>
-        <input type="submit" value="search" id="submitthemes">
-    </form>
+<div class="col-xs-4 col-sm-4">
     <ul>
         <li ng-repeat="theme in model.themes">
             <div class="container-fluid row">
-                <div class="col-xs-10">
+                <div class="col-xs-8">
                     <a href="#/user/{{model.userId}}/theme/{{theme._id}}/snatch"
                        class="nounderline">{{theme.name}}</a>
                 </div>
-                <div class="col-xs-2">
+                <div class="col-xs-4">
                     <a href="#/user/{{model.userId}}/theme/{{theme._id}}" class="nounderline">
                         <span class="glyphicon glyphicon-cog"></span></a>
                 </div>
@@ -59,17 +63,45 @@
 </div>
 
 <div class="vr"></div>
+<div class="vr1"></div>
 
-<div class="col-xs-4">
-    <form class="form-wrapper">
-        <input type="text" id="searchsnatches" placeholder="Search for snatches" required>
-        <input type="submit" value="search" id="submitsnatches">
-    </form>
+<div class="col-xs-4 col-sm-4">
     <ul>
         <li ng-repeat="user in model.followedUsers">
             <div class="container-fluid row">
                 <a href="#/user/{{user._id}}/theme"
                    class="nounderline">{{user.username}}</a>
+            </div>
+        </li>
+    </ul>
+</div>
+
+<div class="col-xs-4 col-sm-4">
+    <form class="form-wrapper">
+        <select ng-model="model.selectedName" ng-options="x for x in model.keywords">
+        </select>
+        <input ng-model="model.query" type="text" id="searchthemes" placeholder="Search by keyword..." required>
+        <input ng-click="model.searchQuery(model.query)" type="submit" value="search" id="submitthemes">
+    </form>
+    <ul>
+        <li ng-repeat="user in model.userSearchResult">
+            <div class="container-fluid row">
+                <a href="#/user/{{user._id}}/theme"
+                   class="nounderline followed">User: {{user.username}}</a>
+                <button ng-click="model.followUser(user._id)" type="button" class="btn btn-default btn-xs">
+                    <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Follow
+                </button>
+            </div>
+        </li>
+    </ul>
+    <ul>
+        <li ng-repeat="theme in model.themeSearchResult">
+            <div class="container-fluid row">
+                <a href="#/user/{{model.userId}}/theme/{{theme._id}}/snatch"
+                   class="nounderline followed">Theme: {{theme.name}}</a>
+                <button ng-click="model.followTheme(theme._id)" type="button" class="btn btn-default btn-xs">
+                    <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Follow
+                </button>
             </div>
         </li>
     </ul>
