--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -2,15 +2,16 @@ input.form-control {
     margin-bottom: 5px;
 }
 
-body {
+.snatch {
     font-family: Verdana;
-    padding: 60px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     overflow: scroll;
 }
 
-/*.app {*/
-    /*background-color: lavender;*/
-/*}*/
+.homepage {
+    padding-left: 60px;
+}
 
 .links {
     color: darkblue;
@@ -45,7 +46,7 @@ li {
 }
 
 .followed {
-    padding-right: 10px;
+    padding-right: 20px;
 }
 
 .vr {
