--- a/public/project/views/user/login.view.client.html
+++ b/public/project/views/user/login.view.client.html
@@ -1,3 +1,15 @@
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid row">
+        <div class="col-xs-11">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/home.html">
+                    Home
+                </a>
+            </div>
+        </div>
+    </div>
+</nav>
+
 <div class="container">
     <div ng-show="model.error" class="alert alert-danger alert-dismissible">
         {{model.error}}
