--- a/public/project/views/snatch/snatch-list.view.client.html
+++ b/public/project/views/snatch/snatch-list.view.client.html
@@ -33,7 +33,7 @@
     <ul>
         <li ng-repeat="snatch in model.snatches">
             <div class="container-fluid row">
-                <div class="col-xs-4">
+                <div class="col-xs-11">
                     <a href="#/user/{{model.userId}}/theme/{{model.themeId}}/snatch/{{snatch._id}}" class="nounderline">
                         <img id="image" ng-src="{{snatch.url}}">
                     </a>
@@ -43,6 +43,11 @@
                     <textarea ng-model="model.textModel" name='newcomment' id='newcomment'
                               placeholder="Add a comment..."></textarea>
                     <button ng-click="model.addCommentToSnatch(snatch)" type="button">Submit</button>
+                </div>
+                <div class="col-xs-1">
+                    <a href="#/user/{{model.userId}}/theme/{{model.themeId}}/snatch/{{snatch._id}}" class="nounderline">
+                        <span class="glyphicon glyphicon-edit"></span>
+                    </a>
                 </div>
             </div>
         </li>
@@ -55,6 +60,11 @@
             <div class="col-xs-3 text-center">
                 <a href="#/user/{{model.userId}}" class="navbar-link">
                     <span class="glyphicon glyphicon-user"></span>
+                </a>
+            </div>
+            <div class="col-xs-3 text-center">
+                <a ng-click=model.logout() class="navbar-link">
+                    <span class="glyphicon glyphicon-log-out"></span>
                 </a>
             </div>
         </div>
