--- a/public/project/views/theme/theme-list.view.client.html
+++ b/public/project/views/theme/theme-list.view.client.html
@@ -144,6 +144,11 @@
                     <span class="glyphicon glyphicon-user"></span>
                 </a>
             </div>
+            <div class="col-xs-3 text-center">
+                <a ng-click=model.logout() class="navbar-link">
+                    <span class="glyphicon glyphicon-log-out"></span>
+                </a>
+            </div>
         </div>
     </div>
 </nav>
