--- a/public/project/views/user/profile.view.client.html
+++ b/public/project/views/user/profile.view.client.html
@@ -1,13 +1,17 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid row">
-        <div class="col-xs-11 col-sm-11">
+        <div class="col-xs-11">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">
-                    Snatch
+                <a class="navbar-brand" href="/home.html">
+                    Home
                 </a>
             </div>
+            <span ng-show="model.user.userType=='ADMIN'">
+                <a class="navbar-brand" href="#/admin">
+                    Admin
+                </a>
+            </span>
         </div>
-
         <div class="col-xs-1 col-sm-1">
             <div class="navbar-header">
                 <p class="navbar-text">
@@ -61,33 +65,9 @@
 
     <a class="btn btn-primary btn-block"
        href="#/user/{{model.user._id}}/theme">Themes</a>
-    <a class="btn btn-danger btn-block"
-       href="#/login">Logout</a>
+    <a class="btn btn-danger btn-block" ng-click=model.logout()>Logout</a>
+    <a class="btn btn-danger btn-block" ng-click="model.unregister()" >Unregister</a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container">
-        <div class="row navbar-text">
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-ok"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-star"></span>
-                </a>
-            </div>
-            <div class="col-xs-3 text-center">
-                <a href="#">
-                    <span class="glyphicon glyphicon-heart"></span>
-                </a>
-            </div>
-        </div>
-    </div>
 </nav>
