--- a/public/project/views/snatch/snatch-list.view.client.html
+++ b/public/project/views/snatch/snatch-list.view.client.html
@@ -2,8 +2,12 @@
     <div class="container-fluid row">
         <div class="col-xs-1 col-sm-1">
             <div class="navbar-header">
-                <p class="navbar-text">
+                <p ng-show="model.user!=undefined" class="navbar-text">
                     <a href="#/user/{{model.userId}}/theme" class="navbar-link">
+                        <span class="glyphicon glyphicon-chevron-left"></span></a>
+                </p>
+                <p ng-show="model.user==undefined" class="navbar-text">
+                    <a href="#/guest" class="navbar-link">
                         <span class="glyphicon glyphicon-chevron-left"></span></a>
                 </p>
             </div>
@@ -19,7 +23,7 @@
 
         <div class="col-sm-1 col-xs-1">
             <div class="navbar-header">
-                <p id="plus" class="navbar-text">
+                <p ng-show="model.user!=undefined" id="plus" class="navbar-text">
                     <a ng-click="model.createSnatch(model.snatch)" class="navbar-link">
                         <span class="glyphicon glyphicon-plus"></span>
                     </a>
@@ -40,12 +44,12 @@
                     <p>{{snatch.dateCreated}}</p><br>
                     <p class="noborder" id="des" readonly>{{snatch.description}}</p>
                     <pre class="noborder" name='comments' id='comments'>{{snatch.comment}}</pre>
-                    <textarea ng-model="model.textModel" name='newcomment' id='newcomment'
+                    <textarea ng-show="model.user!=undefined" ng-model="model.textModel" name='newcomment' id='newcomment'
                               placeholder="Add a comment..."></textarea>
-                    <button ng-click="model.addCommentToSnatch(snatch)" type="button">Submit</button>
+                    <button ng-show="model.user!=undefined" ng-click="model.addCommentToSnatch(snatch)" type="button">Submit</button>
                 </div>
                 <div class="col-xs-1">
-                    <a href="#/user/{{model.userId}}/theme/{{model.themeId}}/snatch/{{snatch._id}}" class="nounderline">
+                    <a ng-show="model.user!=undefined" href="#/user/{{model.userId}}/theme/{{model.themeId}}/snatch/{{snatch._id}}" class="nounderline">
                         <span class="glyphicon glyphicon-edit"></span>
                     </a>
                 </div>
@@ -55,7 +59,7 @@
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
-    <div id="user" class="container-fluid">
+    <div ng-show="model.user!=undefined" id="user" class="container-fluid">
         <div class="row navbar-text">
             <div class="col-xs-3 text-center">
                 <a href="#/user/{{model.userId}}" class="navbar-link">
