--- a/public/project/views/user/profile.view.client.html
+++ b/public/project/views/user/profile.view.client.html
@@ -49,12 +49,10 @@
             <input ng-model="model.user.lastName" type="text" class="form-control" id="last-name"
                    placeholder="Last Name">
         </div>
-        <div class="input-group date form-group" data-provide="datepicker">
+        <div class="form-group">
             <label for="dob">Date of Birth</label>
-            <input class="form-control" ng-model="model.user.DOB" placeholder="Date of Birth" type="text" id="dob">
-            <div class="input-group-addon">
-                <span class="glyphicon glyphicon-th"></span>
-            </div>
+            <input class="form-control" ng-model="model.user.DOB" placeholder="Date of Birth" type="text" id="dob"
+                   placeholder="Date of Birth">
         </div>
         <div class="form-group">
             <label for="phone">Phone Number</label>
