adding walmart service

--- a/public/project/views/snatch/snatch-edit.view.client.html
+++ b/public/project/views/snatch/snatch-edit.view.client.html
@@ -13,7 +13,7 @@
         <div class="col-xs-10">
             <div class="navbar-header">
                 <a id="head" class="navbar-brand">
-                    Your Snatch {{model.snatch.type}}
+                    Your Snatch
                 </a>
             </div>
         </div>
@@ -52,7 +52,7 @@
             <textarea ng-model="model.themeTags" rows="2" name="themes" type="text" class="form-control"
                       id="themes" placeholder="themes" required readonly>
             </textarea>
-            <label for="url">Add One Theme Tag below</label>
+            <label for="url">Add Theme Tag below</label>
             <input ng-model="model.themeTag" name="themeTag" type="text" class="form-control"
                    id="themeTag" placeholder="Theme Tag" required>
             </input>
