--- a/public/project/views/snatch/snatch-search.view.client.html
+++ b/public/project/views/snatch/snatch-search.view.client.html
@@ -27,7 +27,7 @@
 <div class="container">
     <form class="form-wrapper">
         <div class="col-xs-5">
-            <label>Want to see price of snatch? search here</label>
+            <label>Want to find snatch details from Walmart? search here</label>
         </div>
         <div class="col-xs-7">
             <input ng-model="model.query" type="text" id="searchWalmart" placeholder="Search Snatch Online" required>
@@ -40,7 +40,7 @@
                 <img id="image" ng-src="{{product.mediumImage}}">
                 <label>Sale Prise</label>
                 <p>{{product.salePrice}}</p>
-                <label>Short Description</label>
+                <label>Details Description</label>
                 <p>{{product.shortDescription}}</p>
             </div>
         </li>
