Fix label of Walmart API

--- a/public/project/views/snatch/snatch-list.view.client.html
+++ b/public/project/views/snatch/snatch-list.view.client.html
@@ -39,7 +39,7 @@
 
 <div class="container">
     <a ng-show="model.user!=undefined" href="#/user/{{model.userId}}/theme/{{model.themeId}}/snatch/search" class="nounderline">
-        Want to find snatch details from Walmart? click here to search
+        Want to find similar items in Walmart? click here to search.
     </a>
     <ul>
         <li ng-repeat="snatch in model.snatches">
