--- a/public/project/views/snatch/snatch-search.view.client.html
+++ b/public/project/views/snatch/snatch-search.view.client.html
@@ -27,7 +27,8 @@
 <div class="container">
     <form class="form-wrapper">
         <div class="col-xs-5">
-            <label>Want to find snatch details from Walmart? search here</label>
+            <label>Want to find similar items in Walmart? click here to search.
+            </label>
         </div>
         <div class="col-xs-7">
             <input ng-model="model.query" type="text" id="searchWalmart" placeholder="Search Snatch Online" required>
