add more ng-show

--- a/public/project/views/snatch/snatch-list.view.client.html
+++ b/public/project/views/snatch/snatch-list.view.client.html
@@ -59,6 +59,9 @@
                     <a ng-show="model.user!=undefined&&model.user._id==model.theme._user" href="#/user/{{model.userId}}/theme/{{model.themeId}}/snatch/{{snatch._id}}" class="nounderline">
                         <span class="glyphicon glyphicon-edit"></span>
                     </a>
+                    <a ng-show="model.user!=undefined&&model.user.userType=='ADMIN'" href="#/user/{{model.userId}}/theme/{{model.themeId}}/snatch/{{snatch._id}}" class="nounderline">
+                        <span class="glyphicon glyphicon-edit"></span>
+                    </a>
                 </div>
             </div>
         </li>
