--- a/public/project/views/theme/theme-list.view.client.html
+++ b/public/project/views/theme/theme-list.view.client.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="col-xs-4 hidden-xs">
-            <div class="navbar-header">
+            <div ng-show="model.user._id==model.userId" class="navbar-header">
                 <a class="navbar-brand" href="#">
                     Search
                 </a>
