--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -7,6 +7,15 @@ input.form-control {
     border-color: gray;
 }
 
+.navbar-default .navbar-brand {
+    color: white;
+    font-size: 16px;
+}
+
+.navbar-default .navbar-link {
+    color: white;
+}
+
 .snatch {
     font-family: Verdana;
     padding-top: 60px;
