--- a/public/project/views/user/profile.view.client.html
+++ b/public/project/views/user/profile.view.client.html
@@ -3,7 +3,7 @@
         <div class="col-xs-4">
             <div class="navbar-header">
                 <a class="navbar-brand" href="/home.html">
-                    Home
+                    Return to Home
                 </a>
             </div>
         </div>
