add favicon,copyright,change navbar color

--- a/public/project/views/user/profile.view.client.html
+++ b/public/project/views/user/profile.view.client.html
@@ -67,7 +67,8 @@
        href="#/user/{{model.user._id}}/theme">Themes</a>
     <a class="btn btn-danger btn-block" ng-click=model.logout()>Logout</a>
     <a class="btn btn-danger btn-block" ng-click="model.unregister()">Unregister</a>
-</div>
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-</nav>
+    <div class="col-lg-12 copyright text-center">
+        <p>Copyright © Snatch 2016</p>
+    </div>
+</div>
