--- a/public/project/views/user/register.view.client.html
+++ b/public/project/views/user/register.view.client.html
@@ -26,4 +26,8 @@
                 href="#/login">Cancel
         </a>
     </form>
+
+    <div class="col-lg-12 copyright text-center">
+        <p>Copyright © Snatch 2016</p>
+    </div>
 </div>
