--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -3,8 +3,9 @@ input.form-control {
 }
 
 .navbar-default {
-    background-color: gray;
-    border-color: gray;
+    background-color: cadetblue;
+    border-color: cadetblue;
+    height: 20px;
 }
 
 .navbar-default .navbar-brand {
@@ -14,6 +15,14 @@ input.form-control {
 
 .navbar-default .navbar-link {
     color: white;
+}
+
+.col-xs {
+    width: 20%;
+}
+
+.col-sm {
+    width: 20%;
 }
 
 .snatch {
@@ -59,13 +68,18 @@ li {
     list-style-type: none;
 }
 
+.copyright {
+    position: relative;
+    bottom: 0;
+}
+
 .followed {
     padding-right: 20px;
 }
 
 .vr {
     width:3px;
-    background-color:grey;
+    background-color: cadetblue;
     position:absolute;
     top:0;
     bottom:0;
@@ -74,7 +88,7 @@ li {
 
 .vr1 {
     width:3px;
-    background-color:grey;
+    background-color:cadetblue;
     position:absolute;
     top:0;
     bottom:0;
@@ -83,7 +97,7 @@ li {
 
 .vr2 {
     width:3px;
-    background-color:grey;
+    background-color:cadetblue;
     position:absolute;
     top:0;
     bottom:0;
