--- a/public/project/views/admin/admin.view.client.html
+++ b/public/project/views/admin/admin.view.client.html
@@ -12,56 +12,62 @@
 
         <div class="col-xs-5">
             <div class="navbar-header">
-                <a id="head" class="navbar-brand" href="#">
+                <p id="head" class="navbar-brand" href="#">
                     User Management
-                </a>
+                </p>
             </div>
         </div>
 
         <div class="col-xs-6">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">
+                <p class="navbar-brand" href="#">
                     Theme Management
-                </a>
+                </p>
             </div>
         </div>
     </div>
 </nav>
 
 <!--user list-->
-<div class="col-xs-6">
-    <ul>
-        <li ng-repeat="user in model.userlist">
-            <div class="container-fluid row">
-                <div class="col-xs-8">
-                    <p class="nounderline">{{user.username}}</p>
+<div class="container">
+    <div class="col-xs-6">
+        <ul>
+            <li ng-repeat="user in model.userlist">
+                <div class="container-fluid row">
+                    <div class="col-xs-8">
+                        <p class="nounderline">{{user.username}}</p>
+                    </div>
+                    <button ng-click="model.deleteUser(user._id)" type="button" class="btn btn-default btn-xs">
+                        <span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span> delete
+                    </button>
                 </div>
-                <button ng-click="model.deleteUser(user._id)" type="button" class="btn btn-default btn-xs">
-                    <span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span> delete
-                </button>
-            </div>
-        </li>
-    </ul>
-</div>
+            </li>
+        </ul>
+    </div>
 
-<!--divide bar-->
-<div class="vr2 hidden-xs"></div>
+    <!--divide bar-->
+    <div class="vr2 hidden-xs"></div>
 
-<!--Theme list-->
-<div class="col-xs-6">
-    <ul>
-        <li ng-repeat="theme in model.themelist">
-            <div class="container-fluid row">
-                <div class="col-xs-8">
-                    <a href="#/user/{{model.userId}}/theme/{{theme._id}}/snatch"
-                       class="text-left nounderline">{{theme.name}}</a>
+    <!--Theme list-->
+    <div class="col-xs-6">
+        <ul>
+            <li ng-repeat="theme in model.themelist">
+                <div class="container-fluid row">
+                    <div class="col-xs-8">
+                        <a href="#/user/{{model.userId}}/theme/{{theme._id}}/snatch"
+                           class="text-left nounderline">{{theme.name}}</a>
+                    </div>
+                    <button ng-click="model.deleteTheme(theme._id)" type="button" class="btn btn-default btn-xs">
+                        <span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span> delete
+                    </button>
                 </div>
-                <button ng-click="model.deleteTheme(theme._id)" type="button" class="btn btn-default btn-xs">
-                    <span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span> delete
-                </button>
-            </div>
-        </li>
-    </ul>
+            </li>
+        </ul>
+    </div>
+
+    <div class="col-lg-12 copyright text-center">
+        <p>Copyright © Snatch 2016</p>
+    </div>
 </div>
 
 <!--footer-->
