--- a/public/project/views/guest/guest.view.client.html
+++ b/public/project/views/guest/guest.view.client.html
@@ -11,9 +11,9 @@
 
         <div class="col-xs-11">
             <div class="navbar-header">
-                <a id="head" class="navbar-brand">
+                <p id="head" class="navbar-brand">
                     Guest
-                </a>
+                </p>
             </div>
         </div>
     </div>
@@ -34,6 +34,9 @@
                 </div>
             </li>
         </ul>
+    </div>
+    <div class="col-lg-12 copyright text-center">
+        <p>Copyright © Snatch 2016</p>
     </div>
 </div>
 
