--- a/public/project/views/snatch/snatch-edit.view.client.html
+++ b/public/project/views/snatch/snatch-edit.view.client.html
@@ -12,9 +12,9 @@
 
         <div class="col-xs-10">
             <div class="navbar-header">
-                <a id="head" class="navbar-brand">
+                <p id="head" class="navbar-brand">
                     Your Snatch
-                </a>
+                </p>
             </div>
         </div>
 
@@ -74,6 +74,9 @@
         </div>
     </form>
     <a ng-click="model.deleteSnatch(model.snatchId)" class="btn btn-danger  btn-block">Delete</a>
+    <div class="col-lg-12 copyright text-center">
+        <p>Copyright © Snatch 2016</p>
+    </div>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
