--- a/public/project/views/snatch/snatch-list.view.client.html
+++ b/public/project/views/snatch/snatch-list.view.client.html
@@ -19,9 +19,9 @@
 
         <div class="col-xs-10">
             <div class="navbar-header">
-                <a id="head" class="navbar-brand">
+                <p id="head" class="navbar-brand">
                     Snatches
-                </a>
+                </p>
             </div>
         </div>
 
@@ -66,6 +66,9 @@
             </div>
         </li>
     </ul>
+    <div class="col-lg-12 copyright text-center">
+        <p>Copyright © Snatch 2016</p>
+    </div>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
