--- a/public/project/views/snatch/snatch-search.view.client.html
+++ b/public/project/views/snatch/snatch-search.view.client.html
@@ -14,9 +14,9 @@
         </div>
         <div class="col-xs-10">
             <div class="navbar-header">
-                <a id="head" class="navbar-brand">
+                <p id="head" class="navbar-brand">
                     Search Snatches Online
-                </a>
+                </p>
             </div>
         </div>
         <div class="col-sm-1 col-xs-1">
@@ -46,6 +46,9 @@
             </div>
         </li>
     </ul>
+    <div class="col-lg-12 copyright text-center">
+        <p>Copyright © Snatch 2016</p>
+    </div>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
