--- a/public/project/views/theme/theme-list.view.client.html
+++ b/public/project/views/theme/theme-list.view.client.html
@@ -12,9 +12,9 @@
 
         <div class="col-xs-4 col-sm-2">
             <div class="navbar-header">
-                <a id="head" class="navbar-brand" href="#">
+                <p id="head" class="navbar-brand">
                     Themes
-                </a>
+                </p>
             </div>
         </div>
 
@@ -30,17 +30,17 @@
 
         <div class="col-xs-6 col-sm-4">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">
+                <p class="navbar-brand">
                     Users following
-                </a>
+                </p>
             </div>
         </div>
 
         <div class="col-xs-4 hidden-xs">
             <div ng-show="model.user._id==model.userId" class="navbar-header">
-                <a class="navbar-brand" href="#">
+                <p class="navbar-brand">
                     Search
-                </a>
+                </p>
             </div>
         </div>
     </div>
@@ -48,91 +48,97 @@
 <!--header end-->
 
 <!--Theme list-->
-<div class="col-xs-6 col-sm-4">
-    <ul>
-        <li ng-repeat="theme in model.themes">
-            <div class="container-fluid row">
-                <div class="col-xs-8">
-                    <a href="#/user/{{model.userId}}/theme/{{theme._id}}/snatch"
-                       class="text-left nounderline">{{theme.name}}</a>
+<div class="container">
+    <div class="col-xs-6 col-sm-4">
+        <ul>
+            <li ng-repeat="theme in model.themes">
+                <div class="container-fluid row">
+                    <div class="col-xs-8">
+                        <a href="#/user/{{model.userId}}/theme/{{theme._id}}/snatch"
+                           class="text-left nounderline">{{theme.name}}</a>
+                    </div>
+                    <div class="col-xs-4">
+                        <a ng-show="model.user._id==model.userId" href="#/user/{{model.userId}}/theme/{{theme._id}}" class="nounderline">
+                            <span class="glyphicon glyphicon-cog"></span></a>
+                    </div>
                 </div>
-                <div class="col-xs-4">
-                    <a ng-show="model.user._id==model.userId" href="#/user/{{model.userId}}/theme/{{theme._id}}" class="nounderline">
-                        <span class="glyphicon glyphicon-cog"></span></a>
+            </li>
+        </ul>
+        <ul>
+            <li ng-repeat="theme in model.followedThemes">
+                <div class="container-fluid row">
+                    <div class="col-xs-8">
+                        <a href="#/user/{{model.userId}}/theme/{{theme._id}}/snatch"
+                           class="nounderline followed">{{theme.name}}
+                        </a>
+                    </div>
+                    <div ng-show="model.user._id==model.userId" class="col-xs-4">
+                        <button ng-click="model.unfollowTheme(theme._id)" type="button" class="btn btn-default btn-xs">
+                            <span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span> Unfollow
+                        </button>
+                    </div>
                 </div>
-            </div>
-        </li>
-    </ul>
-    <ul>
-        <li ng-repeat="theme in model.followedThemes">
-            <div class="container-fluid row">
-                <div class="col-xs-8">
-                    <a href="#/user/{{model.userId}}/theme/{{theme._id}}/snatch"
-                       class="nounderline followed">{{theme.name}}
+            </li>
+        </ul>
+    </div>
+
+    <!--divide bar-->
+    <div class="vr hidden-xs"></div>
+
+    <!--user list-->
+    <div class="col-xs-6 col-sm-4">
+        <ul>
+            <li ng-repeat="user in model.followedUsers">
+                <div class="container-fluid row">
+                    <a href="#/user/{{user._id}}/theme"
+                       class="nounderline followed">{{user.username}}
                     </a>
-                </div>
-                <div ng-show="model.user._id==model.userId" class="col-xs-4">
-                    <button ng-click="model.unfollowTheme(theme._id)" type="button" class="btn btn-default btn-xs">
+                    <button ng-show="model.user._id==model.userId" ng-click="model.unfollowUser(user._id)" type="button" class="btn btn-default btn-xs">
                         <span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span> Unfollow
                     </button>
                 </div>
-            </div>
-        </li>
-    </ul>
-</div>
+            </li>
+        </ul>
+    </div>
 
-<!--divide bar-->
-<div class="vr hidden-xs"></div>
+    <!--divide bar-->
+    <div class="vr1 hidden-xs"></div>
 
-<!--user list-->
-<div class="col-xs-6 col-sm-4">
-    <ul>
-        <li ng-repeat="user in model.followedUsers">
-            <div class="container-fluid row">
-                <a href="#/user/{{user._id}}/theme"
-                   class="nounderline followed">{{user.username}}
-                </a>
-                <button ng-show="model.user._id==model.userId" ng-click="model.unfollowUser(user._id)" type="button" class="btn btn-default btn-xs">
-                    <span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span> Unfollow
-                </button>
-            </div>
-        </li>
-    </ul>
-</div>
+    <!--search area-->
+    <div class="hidden-xs col-sm-4">
+        <form ng-show="model.user._id==model.userId" class="form-wrapper">
+            <select ng-model="model.selectedName" ng-options="x for x in model.keywords">
+            </select>
+            <input ng-model="model.query" type="text" id="searchthemes" placeholder="Search by keyword..." required>
+            <input ng-click="model.searchQuery(model.query)" type="submit" value="search" id="submitthemes">
+        </form>
+        <ul ng-show="model.user._id==model.userId">
+            <li ng-repeat="user in model.userSearchResult">
+                <div class="container-fluid row">
+                    <a href="#/user/{{user._id}}/theme"
+                       class="nounderline followed">User: {{user.username}}</a>
+                    <button ng-click="model.followUser(user._id)" type="button" class="btn btn-default btn-xs">
+                        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Follow
+                    </button>
+                </div>
+            </li>
+        </ul>
+        <ul ng-show="model.user._id==model.userId">
+            <li ng-repeat="theme in model.themeSearchResult">
+                <div class="container-fluid row">
+                    <a href="#/user/{{model.userId}}/theme/{{theme._id}}/snatch"
+                       class="nounderline followed">Theme: {{theme.name}}</a>
+                    <button ng-click="model.followTheme(theme._id)" type="button" class="btn btn-default btn-xs">
+                        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Follow
+                    </button>
+                </div>
+            </li>
+        </ul>
+    </div>
 
-<!--divide bar-->
-<div class="vr1 hidden-xs"></div>
-
-<!--search area-->
-<div class="hidden-xs col-sm-4">
-    <form ng-show="model.user._id==model.userId" class="form-wrapper">
-        <select ng-model="model.selectedName" ng-options="x for x in model.keywords">
-        </select>
-        <input ng-model="model.query" type="text" id="searchthemes" placeholder="Search by keyword..." required>
-        <input ng-click="model.searchQuery(model.query)" type="submit" value="search" id="submitthemes">
-    </form>
-    <ul ng-show="model.user._id==model.userId">
-        <li ng-repeat="user in model.userSearchResult">
-            <div class="container-fluid row">
-                <a href="#/user/{{user._id}}/theme"
-                   class="nounderline followed">User: {{user.username}}</a>
-                <button ng-click="model.followUser(user._id)" type="button" class="btn btn-default btn-xs">
-                    <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Follow
-                </button>
-            </div>
-        </li>
-    </ul>
-    <ul ng-show="model.user._id==model.userId">
-        <li ng-repeat="theme in model.themeSearchResult">
-            <div class="container-fluid row">
-                <a href="#/user/{{model.userId}}/theme/{{theme._id}}/snatch"
-                   class="nounderline followed">Theme: {{theme.name}}</a>
-                <button ng-click="model.followTheme(theme._id)" type="button" class="btn btn-default btn-xs">
-                    <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Follow
-                </button>
-            </div>
-        </li>
-    </ul>
+    <div class="col-lg-12 copyright text-center">
+        <p>Copyright © Snatch 2016</p>
+    </div>
 </div>
 
 <!--footer-->
