--- a/public/project/views/theme/theme-new.view.client.html
+++ b/public/project/views/theme/theme-new.view.client.html
@@ -12,9 +12,9 @@
 
         <div class="col-xs-10">
             <div class="navbar-header">
-                <a id="head1" class="navbar-brand" href="#">
+                <p id="head1" class="navbar-brand">
                     Themes
-                </a>
+                </p>
             </div>
         </div>
 
@@ -50,6 +50,9 @@
                       placeholder="Description"></textarea>
         </div>
     </form>
+    <div class="col-lg-12 copyright text-center">
+        <p>Copyright © Snatch 2016</p>
+    </div>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
