--- a/public/project/views/user/login.view.client.html
+++ b/public/project/views/user/login.view.client.html
@@ -34,4 +34,7 @@
         </a>
         <img id="loginCollage" src="images/loginCollage.jpg">
     </form>
+    <div class="col-lg-12 copyright text-center">
+        <p>Copyright © Snatch 2016</p>
+    </div>
 </div>
