change copyright position

--- a/public/project/views/guest/guest.view.client.html
+++ b/public/project/views/guest/guest.view.client.html
@@ -35,15 +35,15 @@
             </li>
         </ul>
     </div>
-    <div class="col-lg-12 copyright text-center">
-        <p>Copyright © Snatch 2016</p>
-    </div>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
-    <div id="guestlogin" class="container-fluid">
+    <div class="container-fluid col-xs-3 text-center" id="guestlogin">
         <a href="#/login" class="navbar-link">
             <span class="glyphicon glyphicon-log-in"></span> Login/Register
         </a>
+    </div>
+    <div class="col-lg-12 copyright text-center">
+        <p>Copyright © Snatch 2016</p>
     </div>
 </nav>
