--- a/public/project/views/admin/admin.view.client.html
+++ b/public/project/views/admin/admin.view.client.html
@@ -64,10 +64,6 @@
             </li>
         </ul>
     </div>
-
-    <div class="col-lg-12 copyright text-center">
-        <p>Copyright © Snatch 2016</p>
-    </div>
 </div>
 
 <!--footer-->
@@ -83,6 +79,9 @@
                 <a ng-click=model.logout() class="navbar-link">
                     <span class="glyphicon glyphicon-log-out"></span>
                 </a>
+            </div>
+            <div class="col-xs-6 copyright text-center">
+                <p>Copyright © Snatch 2016</p>
             </div>
         </div>
     </div>
